# todos-rs

./: .gitignore  Readme.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 1_user.up.sql  2_todo.up.sql
backend/src/: actions.rs  auth.rs  database.rs  handlers.rs  http.rs  lib.rs  main.rs  models.rs  query.rs  repository.rs  security.rs  todo.rs
backend/src/actions/: error.rs  todo.rs  user.rs
backend/src/auth/: actions.rs  models.rs  query.rs  repository.rs  security.rs
backend/src/entities/: todo.rs  user.rs
backend/src/handlers/: auth.rs  error.rs  todo.rs  user.rs
backend/src/http/: api.rs  app.rs  extractors.rs  server.rs  swagger.rs
backend/src/http/api/: v1.rs
backend/src/http/api/v1/: auth.rs  todo.rs
backend/src/models/: auth.rs  todo.rs  user.rs
backend/src/repository/: error.rs  todo.rs  user.rs
backend/src/security/: error.rs  jwt.rs  password.rs
backend/src/todo/: actions.rs  models.rs  query.rs  repository.rs
backend/swagger/: index.html  openapi.yaml
docker/: backend.Dockerfile  frontend.Dockerfile  frontend.nginx.conf  migrate.Dockerfile
frontend/: Cargo.toml  index.html  package-lock.json  styles.scss  tailwind.config.js
frontend/src/: api.rs  app.rs  components.rs  lib.rs  main.rs  pages.rs  router.rs  store.rs
frontend/src/api/: error.rs  ext.rs  types.rs
frontend/src/components/: active.rs  alert.rs  alerts.rs  completed.rs  header.rs  home.rs  modal.rs  navbar.rs  new_todo.rs  pagination.rs  sign_in.rs  sign_up.rs  spinner.rs  text_input.rs  todo.rs  todo_row.rs  todos_table.rs
frontend/src/components/todo/: add.rs  list.rs
frontend/src/pages/: sign_in.rs  sign_up.rs  todos.rs
frontend/src/providers/: auth.rs  guest.rs
