[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
axum = { version = "0.6.4", features = ["headers", "multipart"] }
bcrypt = "0.13.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
hyper = { version = "0.14.23", features = ["full"] }
jsonwebtoken = "8.2.0"
mime = "0.3.16"
sea-query = { version = "0.28.3", features = ["chrono", "serde_json", "uuid", "with-chrono", "with-uuid"] }
sea-query-binder = { version = "0.3.0", features = ["chrono", "serde_json", "uuid", "with-chrono", "with-uuid", "sqlx-postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
sqlx = { version = "0.6.2", features = ["json", "decimal", "chrono", "uuid", "postgres", "runtime-tokio-native-tls", "offline"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
