[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
axum = { version = "0.6.10", features = ["headers", "multipart"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
hyper = { version = "0.14.25", features = ["full"] }
jsonwebtoken = "8.2.0"
mime = "0.3.16"
once_cell = "1.17.1"
sea-orm = { version = "0.11.2", features = [
    "with-chrono",
    "with-uuid",
    "with-json",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
