[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo-net = "0.2.5"
gloo-storage = "0.2.2"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde", "js"] }
wasm-bindgen = { version = "0.2.83", features = ["serde", "serde-serialize", "serde_json"] }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
