[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
gloo-storage = "0.2.2"
gloo-timers = "0.2.6"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde", "js"] }
wasm-bindgen = { version = "0.2.84", features = ["serde", "serde-serialize", "serde_json"] }
wasm-logger = "0.2.0"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
yewdux = "0.9.2"
